--- a/maozi-cloud-config/maozi-cloud-config-swagger/pom.xml
+++ b/maozi-cloud-config/maozi-cloud-config-swagger/pom.xml
@@ -12,14 +12,15 @@
 	<dependencies>
 		
 		<dependency>
-      		<groupId>org.springframework.boot</groupId>
-      		<artifactId>spring-boot-starter-actuator</artifactId>
-   	 	</dependency>
-
-		<dependency>
-    		<groupId>com.github.xiaoymin</groupId> 
-   	 		<artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
-    		<version>${knife4j-openapi2-spring-boot-starter.version}</version>
+			<groupId>com.maozi</groupId>
+			<artifactId>maozi-cloud-config-oauth</artifactId>
+			<version>${maozi-cloud-config-oauth.version}</version>
+		</dependency>
+   	 	
+   	 	<dependency>
+    		<groupId>com.github.xiaoymin</groupId>
+    		<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+    		<version>${knife4j-openapi3-jakarta-spring-boot-starter.version}</version>
 		</dependency>
 
 		<dependency>
@@ -32,6 +33,11 @@
 			<groupId>com.maozi</groupId>
 			<artifactId>maozi-cloud-base-enum</artifactId>
 			<version>${maozi-cloud-base-enum.version}</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 	</dependencies>
