--- a/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-base-entity/maozi-cloud-base-dto/pom.xml
@@ -12,9 +12,9 @@
     <dependencies>
 
        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-annotations</artifactId>
-            <version>${knife4j-annotations.version}</version>
+            <groupId>io.swagger.core.v3</groupId>
+       	 	<artifactId>swagger-annotations-jakarta</artifactId>
+        	<version>${knife4j-annotations.version}</version>
         </dependency>
 
     </dependencies>
