--- a/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-result/pom.xml
+++ b/maozi-cloud-entity/maozi-cloud-business-entity/maozi-cloud-result/pom.xml
@@ -56,6 +56,14 @@
 			<version>${skywalking.version}</version>
 		</dependency>
 		<!-- SkyWalking End -->
+		
+		
+		<!-- SpringCloud Begin -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
+		<!-- SpringCloud End -->
 
 
 	</dependencies>
